fix-align

--- a/style.css
+++ b/style.css
@@ -131,7 +131,10 @@ margin-bottom: 1rem;
 
  .prisca ul li a {
     text-decoration: none;
-    display:block;
+    /*display:block;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: hsl(0, 0%, 20%);
     color:hsl(0, 0%, 100%);
     padding: 0.5rem 5rem;
